--- a/lombok-demo/pom.xml
+++ b/lombok-demo/pom.xml
@@ -16,9 +16,14 @@
 	<description>Demo Lombok</description>
  
 	<dependencies>
-		<dependency>
+			<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
 		</dependency>
 
 		<dependency>
