--- a/immutables-demo/pom.xml
+++ b/immutables-demo/pom.xml
@@ -13,7 +13,7 @@
 	<artifactId>immutables-demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>immutables-demo</name>
-	<description>Immutables Lombok</description>
+	<description>Immutables</description>
 
 
 	<dependencies>
@@ -39,6 +39,31 @@
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.7.0</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+					<annotationProcessorPaths>
+						<dependency>
+							<groupId>org.immutables</groupId>
+							<artifactId>value</artifactId>
+							<version>2.8.2</version>
+						</dependency>
+					</annotationProcessorPaths>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
+
+	<!--<build>
+		<plugins>
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -48,7 +73,7 @@
 					<compilerVersion>11</compilerVersion>
 					<source>11</source>
 					<target>11</target>
-					<!-- Prevents an endPosTable exception during compilation -->
+				 
 					<useIncrementalCompilation>false</useIncrementalCompilation>
 				</configuration>
 
@@ -58,6 +83,6 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
-	</build>
+	</build>-->
 
 </project>
