--- a/autovalue-demo/.gitignore
+++ b/autovalue-demo/.gitignore
@@ -1,42 +1,9 @@
 HELP.md
 target/maven-archiver
 target/maven-status
+target/classes
 autovalue-demo-0.0.1-SNAPSHOT.jar
 autovalue-demo-0.0.1-SNAPSHOT.jar.original
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-### VS Code ###
-.vscode/
-ref/**
-nodejs-app/coverage/**
-nodejs-app/node_modules/**
-nodejs-app/node_modules/**
-nodejs-app/more/**
-/target/
